--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
@@ -415,7 +415,7 @@ Il numero di canali non dev'essere più di tre volte il numero di componenti del
 
 
 
-\subsection{Amministrazione}
+\subsection{Gestione di progetto}
 
 \subsubsection{Ruoli} \label{sec:ruoli}
 	Verrano assegnati dei ruoli corrispondenti a quelli professionali per lo sviluppo del progetto.
