--- a/doc/Esterni/Glossario/terminiGlossario.tex
+++ b/doc/Esterni/Glossario/terminiGlossario.tex
@@ -1,378 +1,73 @@
-\newglossaryentry{amministratoreDiProgetto}
-{
-name={amministratore di progetto},
-description={chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione}
-}
+\item[accoppiamento] Grado di dipendenza tra i vari componenti di un sistema.
+\item[amministratore di progetto] Chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione.
+\item[analista] Chi ha il compito di individuare, a partire dai bisogni del cliente, il problema e decomporlo in requisiti da fornire ai progettisti.
+\item[Asana] Servizio web utilizzato per coordinare le attività di project management.
 
-\newglossaryentry{analista}
-{
-name={analista},
-description={chi ha il compito di individuare, a partire dai bisogni del cliente, il problema da fornire ai progettisti.}
-}
+\item[backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
+\item[baseline] Nel ciclo di vita di un progetto, punto d'arrivo tecnico dal quale non si retrocede.
+\item[branch] All'interno di un repository, insieme di versioni in evoluzione.
+\item[browser] Applicazione per visualizzare pagine web.
+\item[caso d'uso] Insieme di scenari che hanno in comune un obiettivo per un utente.
+\item[ciclo di vita (di un prodotto)] Insieme degli stati che il prodotto assume, dal concepimento al ritiro.
+\item[client] Componente hardware e/o software che richiede servizi o risorse a un server.
+\item[configurazione] Di quali parti si compone un prodotto e il modo in cui esse stanno assieme.
+\item[controllore della qualità] Funzione aziendale (e non ruolo di progetto) di chi accerta la qualità dei prodotti.
+\item[CSS3] Linguaggio web utilizzato per descrivere l'aspetto e la formattazione di un sito web al browser.
+\item[diagramma dei casi d'uso] Grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.
+\item[Diagramma di Gantt] Diagramma usato principalmente nelle attività di amministrazione di progetto; permette la rappresentazione grafica di un calendario di attività, utile al fine di pianificare, coordinare e tracciare specifiche attività in un progetto dando una chiara illustrazione dello stato d’avanzamento del progetto rappresentato.
+\item[Diagramma Nassi–Shneiderman] Notazione grafica per la rappresentazione della programmazione strutturata a blocchi. 
+\item[diagramma WBS] Diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.
+\item[documentazione] Tutto ciò che documenta le attività di un progetto.
+\item[DRI] Acronimo per Directly Responsible Individual, è un modello di lavoro adottato inizialmente da Apple e successivamente da Asana che consiste nell'identificare un singolo responsabile per ogni attività assegnabile. Il team decide di seguire questo modello. La motivazione principale risiede in questa frase: "When nobody knows who’s doing what, and when someone doesn’t feel ultimately responsible for driving work forward, the work may not happen at all."
 
-\newglossaryentry{asana}
-{
-name={Asana},
-description={un servizio utilizzato per coordinare le attività di project management.
-}
-}
-
-\newglossaryentry{backup}
-{
-name={Backup},
-description={indica la replicazione di materiale informativo archiviato nella memoria di massa dei computer, al ﬁne di prevenire la perdita deﬁnitiva dei dati in caso di eventi malevoli accidentali o intenzionali.}
-}
-
-\newglossaryentry{baseline}
-{
-name={baseline},
-description={nel ciclo di vita di un progetto, punto d'arrivo tecnico dal quale non si retrocede.}
-}
-
-\newglossaryentry{bassoAccoppiamento}
-{
-name={basso accoppiamento},
-description={minimizzazione delle dipendenze tra i vari componenti di un sistema.}
-}
-
-\newglossaryentry{branch}
-{
-name={branch},
-description={insieme di versioni di file sorgente in evoluzione.}
-}
-
-\newglossaryentry{casoDiUso}
-{
-name={caso d'uso},
-description={insieme di scenari che hanno in comune un obiettivo per un utente.}
-}
-
-\newglossaryentry{cicloDiVita}
-{
-name={ciclo di vita (di un prodotto)},
-description={insieme degli stati che il prodotto assume, dal concepimento al ritiro.}
-}
-
-\newglossaryentry{configurazione}
-{
-name={configurazione},
-description={di quali parti si compone un prodotto e il modo in cui esse stanno assieme.}
-}
-
-\newglossaryentry{controlloreDellaQualita}
-{
-name={controllore della qualità},
-description={funzione aziendale (e non ruolo di progetto) che accerta la qualità dei prodotti.}
-}
-
-\newglossaryentry{csstre}
-{
-name={CSS3},
-description={un linguaggio web utilizzato per descrivere l'aspetto e la formattazione di un sito web al browser lato client.}
-}
-
-\newglossaryentry{diagrammaCasiDiUso}
-{
-name={diagramma dei casi d'uso},
-description={grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.}
-}
-
-\newglossaryentry{diagrammaGantt}
-{
-name={Diagramma di Gantt},
-description={usato principalmente nelle attività di amministrazione di progetto, permette la rappresentazione graﬁca di un calendario di attività, utile al ﬁne di pianiﬁcare, coordinare e tracciare speciﬁche attività in un progetto dando una chiara illustrazione dello stato d’avanzamento del progetto rappresentato.}
-}
-
-\newglossaryentry{diagrammaNassiShneiderman}
-{
-name={Diagramma Nassi–Shneiderman},
-description={un disegno grafico per la rappresentazione della programmazione strutturata a blocchi. }
-}
-
-\newglossaryentry{diagrammaWBS}
-{
-name={diagramma WBS},
-description={diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.}
-}
-
-\newglossaryentry{documentazione}
-{
-name={documentazione},
-description={tutto ciò che documenta le attività del progetto.}
-}
-
-\newglossaryentry{efficacia}
-{
-name={efficacia},
-description={conformità alle attese.}
-}
-
-\newglossaryentry{efficienza}
-{
-name={efficienza},
-description={contenimento dei costi per raggiungere un obiettivo.}
-}
-
-\newglossaryentry{github}
-{
-name={GitHub},
-description={un servizio web di hosting per lo sviluppo di progetti software, che usa il sistema di controllo di versione Git. Può essere utilizzato anche per la condivisione e la modiﬁca di ﬁle di testo e documenti revisionabili.}
-}
-
-\newglossaryentry{glossario}
-{
-name={glossario},
-description={elenco dei significati dei termini più rilevanti di un documento o di un insieme di documenti.}
-}
-
-\newglossaryentry{htmlcinque}
-{
-name={HTML5},
-description={un linguaggio di markup di pubblico dominio per la strutturazione delle pagine web.}
-}
-
-\newglossaryentry{indiceAnalitico}
-{
-name={indice analitico},
-description={elenco ordinato delle corrispondenze tra particolari termini importanti di un documento e la loro ubicazione in esso.}
-}
-
-\newglossaryentry{indiceGenerale}
-{
-name={indice generale},
-description={elenco (gerarchico) delle parti in cui è strutturato un documento.}
-}
-
-\newglossaryentry{infrastruttura}
-{
-name={infrastruttura},
-description={tutte le risorse hardware e software (di un progetto).}
-}
-
-\newglossaryentry{instagantt}
-{
-name={Instagantt},
-description={applicazione web per la creazione dei diagrammi di Gantt.}
-}
-
-\newglossaryentry{java}
-{
-name={Java},
-description={Java è un linguaggio di programmazione orientato agli oggetti a tipizzazione statica e una piattaforma di elaborazione sviluppati da Sun Microsystems nel 1995.}
-}
-
-\newglossaryentry{javadoc}
-{
-name={Javadoc},
-description={un programma di utilità incluso nel SDK di Java con il quale è possibile generare in modo automatico la documentazione in formato HTML dei sorgenti di un programma Java, a patto che vengano utilizzate delle regole ben precise nella scrittura dei commenti stessi.}
-}
-
-\newglossaryentry{javascript}
-{
-name={JavaScript},
-description={ è un linguaggio di scripting orientato agli oggetti e agli eventi, comunemente utilizzato nella programmazione Web lato client per la creazione, in siti web e applicazioni web, di eﬀetti dinamici interattivi tramite funzioni di script invocate da eventi innescati a loro volta in vari modi dall’utente sulla pagina web in uso. }
-}
-
-\newglossaryentry{latex}
-{
-name={LaTEX},
-description={un linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientiﬁca; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientiﬁci ed è disponibile come software libero.}
-}
-
-\newglossaryentry{latoclient}
-{
-name={Lato client},
-description={ termine che, nell’ambito delle reti di calcolatori, indica le operazioni di elaborazione eﬀettuate da un client in un’architettura client-server. }
-}
-
-\newglossaryentry{milestone}
-{
-name={milestone},
-description={punto nel tempo associato ad un valore strategico.}
-}
-
-\newglossaryentry{mysql}
-{
-name={mySQL},
-description={un software per la gestione di un database relazionale.}
-}
-
-\newglossaryentry{php}
-{
-name={PHP},
-description={un linguaggio di scripting open source molto utilizzato, specialmente per lo sviluppo web.}
-}
-
-\newglossaryentry{pianificazione}
-{
-name={pianificazione},
-description={organizzare e controllare tempo, risorse e risultati.}
-}
-
-\newglossaryentry{pragmadb}
-{
-name={PragmaDB},
-description={un software per la gestione di documenti creati durante il ciclo di vita di un progetto software.}
-}
-
-\newglossaryentry{progettazione}
-{
-name={progettazione},
-description={processo di definizione dell'architettura, dei componenti, delle interfacce e delle altre caratteristiche di un sistema o componente.}
-}
-
-\newglossaryentry{progettista}
-{
-name={progettista},
-description={chi sintetizza una soluzione a partire dalle specifiche di un problema già analizzato.}
-}
-
-\newglossaryentry{progetto}
-{
-name={progetto},
-description={insieme di compiti da svolgere in modo collaborativo a fronte di un incarico (che diventa poi un impegno)}
-}
-
-\newglossaryentry{programmatore}
-{
-name={programmatore},
-description={chi implementa una parte della soluzione dei progettisti.}
-}
-
-\newglossaryentry{qualifica}
-{
-name={qualifica},
-description={verifica e validazione.}
-}
-
-\newglossaryentry{requisito}
-{
-name={requisito},
-description={bisogno da soddisfare o vincolo da rispettare.}
-}
-
-\newglossaryentry{requisitoDiProcesso}
-{
-name={requisito di processo},
-description={vincolo sullo sviluppo del prodotto.}
-}
-
-\newglossaryentry{requisitoDiProdotto}
-{
-name={requisito di prodotto},
-description={bisogno o vincolo sul prodotto da sviluppare.}
-}
-
-\newglossaryentry{requisitoDiSistema}
-{
-name={requisito di sistema},
-description={definizione formale e dettagliata di una funzione del sistema.}
-}
-
-\newglossaryentry{requisitoFunzionale}
-{
-name={requisito funzionale},
-description={servizio che un prodotto deve fornire.}
-}
-
-\newglossaryentry{requisitoNonFunzionale}
-{
-name={requisito non funzionale},
-description={vincolo su uno o più servizi che un prodotto fornisce.}
-}
-
-\newglossaryentry{responsabileDiProgetto}
-{
-name={responsabile di progetto},
-description={chi pianifica il progetto, assegna le persone ai ruoli giusti e rappresenta il progetto presso il fornitore e il committente}
-}
-
-\newglossaryentry{ruolo}
-{
-name={ruolo},
-description={funzione aziendale assegnata a progetto; identifica capacità e compiti}
-}
-
-\newglossaryentry{scenario}
-{
-name={scenario},
-description={sequenza di passi che descrive un esempio di interazione con un sistema.}
-}
-
-\newglossaryentry{schemaPDCA}
-{
-name={schema PDCA},
-description={schema di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi)}
-}
-
-\newglossaryentry{server}
-{
-name={Server},
-description={indica una componente, hardware e/o software, che gestisce il traﬃco di informazioni e fornisce servizi o risorse al client che ne fa richiesta.}
-}
-
-\newglossaryentry{sistema}
-{
-name={sistema},
-description={insieme di componenti organizzati per compiere una o più funzioni.}
-}
-
-\newglossaryentry{slack}
-{
-name={Slack},
-description={una piattaforma per la comunicazione all'interno del team.}
-}
-
-\newglossaryentry{sommario}
-{
-name={sommario},
-description={breve riassunto del contenuto di un documento.}
-}
-
-\newglossaryentry{sonarqube}
-{
-name={SonarQube},
-description={una piattaforma open source per il controllo della qualità del codice.}
-}
-
-\newglossaryentry{sql}
-{
-name={SQL},
-description={Structured Query Language: linguaggio di programmazione dichiarativo basato sull'algebra relazionale che serve a creare, manipolare e interrogare basi di dati relazionali.}
-}
-
-\newglossaryentry{team}
-{
-name={Team},
-description={gruppo di persone che collabora nello svolgimento di un’attività.}
-}
-
-\newglossaryentry{travis}
-{
-name={Travis},
-description={un servizio di integrazione utilizzato per costruire e testare progetti software ospitati presso GitHub.}
-}
-
-\newglossaryentry{trello}
-{
-name={Trello},
-description={un servizio utilizzato per coordinare le attività di project management.}
-}
-
-\newglossaryentry{uml}
-{
-name={UML},
-description={Unified Modelling Language: famiglia di notazioni grafiche che si basano su un singolo meta-modello e servono a descrivere e progettare sistemi software.}
-}
-
-\newglossaryentry{verificatore}
-{
-name={verificatore},
-description={chi verifica il lavoro dei programmatori.}
-}
-
-\newglossaryentry{versione}
-{
-name={versione},
-description={istanza identificata (di una parte della configurazione) nel tempo.}
-}
+Riferimento: https://blog.asana.com/2015/06/why-one-assignee/ 
+\item[efficacia] Conformità alle attese.
+\item[efficienza] Contenimento dei costi per raggiungere un obiettivo.
+\item[GitHub] Servizio web di hosting per repository, che usa il sistema di versionamento Git; può essere utilizzato anche per la condivisione e la modifica di file di testo e documenti revisionabili.
+\item[glossario] Elenco dei termini più rilevanti di un documento (o di un insieme di documenti) e loro significati.
+\item[Gulpease, indice di] Indice, tarato sulla lingua italiana, che misura la qualità di un documento stimandone il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione, ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe --- cosa che ne consente una implementazione automatizzata fortemente affidabile. 
+\item[HTML5] Linguaggio di markup per la strutturazione del contenuto di una pagina web.
+\item[IDE]  Acronimo per Integrated Development Environment, ovvero Ambiente di Sviluppo Integrato; si riferisce ad un software che, in fase di programmazione, aiuta i programmatori nello sviluppo del codice sorgente di un programma. Spesso l'IDE aiuta lo sviluppatore segnalando errori di sintassi del codice direttamente in fase di scrittura, oltre a tutta una serie di strumenti e funzionalità di supporto alla fase di sviluppo e debugging.
+\item[indice generale] Elenco delle parti in cui è strutturato un documento.
+\item[infrastruttura] Tutte le risorse hardware e software (di un progetto).
+\item[Instagantt] Applicazione web per la creazione di diagrammi di Gantt.
+\item[Java] Linguaggio di programmazione orientato agli oggetti a tipizzazione statica (con una sua piattaforma di elaborazione) sviluppato da Sun Microsystems nel 1995.
+\item[Javadoc] Programma di utilità incluso nel SDK di Java con il quale è possibile generare in modo automatico la documentazione in formato HTML dei sorgenti di un programma Java, a patto che vengano utilizzate delle regole ben precise nella scrittura dei commenti stessi.
+\item[JavaScript] Linguaggio di scripting orientato agli oggetti e agli eventi, comunemente utilizzato per la creazione, in siti web e applicazioni web, di effetti dinamici interattivi tramite funzioni invocate da eventi innescati dall’utente sulla pagina web.
+\item[LaTEX] Linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientifica; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientifici ed è disponibile come software libero.
+\item[milestone] Punto nel tempo associato ad un valore strategico per un progetto.
+\item[MySQL] Software per la gestione di database relazionali.
+\item[schema PDCA] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
+\item[PHP] Linguaggio di scripting orientato agli oggetti, utilizzato soprattutto per generare dinamicamente pagine web.
+\item[pianificazione] L'organizzazione e il controllo di tempo, risorse e risultati.
+\item[PragmaDB] Software per la gestione di documenti creati durante il ciclo di vita di un progetto software.
+\item[progettazione] Processo di definizione dell'architettura, dei componenti, delle interfacce e delle altre caratteristiche di un sistema o componente.
+\item[progettista] Chi sintetizza una soluzione a partire dalle specifiche di un problema già analizzato.
+\item[progetto] Insieme di compiti da svolgere in modo collaborativo a fronte di un incarico (che diventa poi un impegno).
+\item[programmatore] Chi implementa una parte della soluzione dei progettisti.
+\item[qualifica] Verifica e validazione.
+\item[requisito] Bisogno da soddisfare o vincolo da rispettare.
+\item[requisito di processo] Vincolo sullo sviluppo del prodotto.
+\item[requisito di prodotto] Bisogno o vincolo sul prodotto da sviluppare.
+\item[requisito di sistema] Definizione formale e dettagliata di una funzione del sistema.
+\item[requisito funzionale] Servizio che un prodotto è tenuto a fornire.
+\item[requisito non funzionale] Vincolo su uno o più servizi che un prodotto fornisce.
+\item[responsabile di progetto] Chi pianifica il progetto, assegna le persone ai ruoli giusti e rappresenta il progetto presso il  committente.
+\item[ruolo] Funzione assegnata a progetto; identifica capacità e compiti.
+\item[scenario] Sequenza di passi che descrive un esempio di interazione tra l'utente e il sistema.
+\item[server] Componente hardware e/o software che fornisce servizi o risorse a chi ne fa richiesta.
+\item[sistema] Insieme di componenti organizzati per compiere una o più funzioni.
+\item[Slack ] Piattaforma per la comunicazione all'interno di un'organizzazione.
+\item[slack, periodo di] Margine temporale che definisce per quanto tempo si possa ritardare un’attività.
+\item[sommario] Breve riassunto del contenuto di un documento.
+\item[SonarQube] Piattaforma open source per il controllo della qualità del codice sorgente.
+\item[SPICE] Acronimo per Software Process Improvement and Capability Determination; è un insieme di documenti tecnici standard per il processo di sviluppo software e le funzioni di gestione di business correlati. È uno degli standard congiunti dell’Organizzazione Internazionale per la Standardizzazione (ISO) e della Commissione Elettrotecnica Internazionale (IEC); corrisponde allo standard ISO/IEC 15504.
+\item[SQL] Structured Query Language: linguaggio di programmazione dichiarativo basato sull'algebra relazionale che serve a creare, manipolare e interrogare basi di dati relazionali.
+\item[stakeholder] Persona a vario titolo coinvolta nel ciclo di vita del software e che ha influenza sul prodotto o sul suo processo di sviluppo. Tale gruppo varia nella sua composizione a seconda dei diversi progetti, ma include sempre utenti/operatori e clienti (che necessariamente non sono sempre gli stessi).
+\item[Team] Gruppo di persone che collabora nello svolgimento di un’attività.
+\item[Travis] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
+\item[Trello] Servizio utilizzato per coordinare le attività di project management.
+\item[UML] Unified Modelling Language: famiglia di notazioni grafiche che si basano su un singolo meta-modello e servono a descrivere e progettare sistemi software.
+\item[verificatore] Chi verifica il lavoro dei programmatori.
+\item[versione] Istanza identificata di una parte della configurazione di un prodotto, nel tempo.
+\item[Web Application] Applicazione accessibile via browser.
