--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -12,6 +12,8 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 
+\usepackage[table]{xcolor}
+
 \usepackage{../../util/hx-vers}
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-front}
