--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -38,3 +38,18 @@
 	\caption{Diario delle modifiche}
 \end{table}
 }
+
+% Periodi del progetto:
+\newcommand{\AR}{\emph{Analisi dei Requisiti}}
+\newcommand{\ARI}{\emph{Analisi dei Requisiti Incrementale}}
+\newcommand{\PA}{\emph{Progettazione Architetturale}}
+\newcommand{\PDC}{\emph{Progettazione di Dettaglio e Codifica}}
+\newcommand{\VV}{\emph{Verifica e Validazione}}
+
+%Ruoli svolti:
+\newcommand{\V}{\emph{Ver.}}
+\newcommand{\AN}{\emph{An.}}
+\newcommand{\PJ}{\emph{Pgett.}}
+\newcommand{\PG}{\emph{Pmm.}}
+\newcommand{\R}{\emph{Resp.}}
+\newcommand{\AM}{\emph{Amm.}}
