--- a/doc/Interni/Norme_di_progetto/diario.tex
+++ b/doc/Interni/Norme_di_progetto/diario.tex
@@ -2,8 +2,9 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	0.0.4 & {\GG} (amministratore) & 27/12/2016 & iniziata stesura processi di supporto \\ \hline
-	0.0.3 & {\MM} (amministratore) & 26/12/2016 & iniziata stesura processo di sviluppo \\ \hline
-	0.0.2 & {\GG} (amministratore) & 25/12/2016 & Iniziata la stesura dello scopo del documento e abbozzate alcune norme sulla documentazione \\ \hline
-	0.0.1 & {\MM} (amministratore) & 24/12/2016 & Stesura scheletro \\ \hline
+	0.0.5 & {\MM} (amministratore) & 20/12/2016 & stesura delle norme sui processi organizzativi \\ \hline
+	0.0.4 & {\GG} (amministratore) & 19/12/2016 & stesura delle norme sui processi di supporto \\ \hline
+	0.0.3 & {\MM} (amministratore) & 17/12/2016 & stesura delle norme sui processi di sviluppo \\ \hline
+	0.0.2 & {\GG} (amministratore) & 17/12/2016 & stesura dello scopo del documento e delle norme sulla documentazione \\ \hline
+	0.0.1 & {\MM} (amministratore) & 13/12/2016 & Stesura scheletro \\ \hline
 \end{diario}
