--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -550,6 +550,14 @@ texttexttext
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
+
+% USARE QUESTO PER IMMAGINI
+\begin{figure}
+  \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepdc1.png}}
+  \caption{Caption}
+  \label{fig:key}
+\end{figure}
+
 	{\includegraphics[width=15cm]{img/orepdc1.png}\par}
 
 	{\includegraphics[width=15cm]{img/orepdc2.png}\par}
