--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -2,6 +2,8 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	0.0.6 & {\PB} Responsabile & 05/12/2016 &  Stesura Preventivo di Periodo  \\ \hline
+	0.0.6 & {\LB} Responsabile & 05/12/2016 &  Inserimento Gantt Diagrammi delle Attività  \\ \hline
 	0.0.5 & {\PB} Responsabile & 29/12/2016 &  Stesura Pianificazione delle Attività  \\ \hline
 	0.0.4 & {\PB} Responsabile & 28/12/2016 &  Stesura Introduzione  \\ \hline
 	0.0.3 & {\LB} Responsabile & 27/12/2016 & Inizio stesura Modello di sviluppo\\ \hline
